# exercise-tracker

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: build.yml
crates/exercise-tracker-cli/: Cargo.toml
crates/exercise-tracker-cli/src/: main.rs
crates/exercise-tracker-core/: Cargo.toml
crates/exercise-tracker-core/migrations/: 20260405000001_initial.sql
crates/exercise-tracker-core/src/: commands.rs  db.rs  error.rs  filter.rs  lib.rs  model.rs  service.rs  summary.rs
docs/: architecture.md  database.md  fit-parsing.md  garmin-integration.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: activity.rs  garmin.rs  mod.rs  preferences.rs
src-tauri/src/garmin/: client.rs  fit_parser.rs  mapping.rs  mod.rs  oauth_exchange.rs  types.rs
src/components/: DeleteButton.tsx  TabBar.tsx
src/components/ActivityDetail/: ActivityDetailView.tsx  ActivityTabs.tsx  LapsTable.tsx  MetricChart.tsx  SummaryCards.tsx
src/components/Calendar/: CalendarView.tsx  DayCell.tsx  DayDetail.tsx  MonthGrid.tsx  RouteMap.tsx  WeekGrid.tsx
src/components/Garmin/: GarminSyncView.tsx
src/components/History/: HistoryView.tsx
src/components/LogActivity/: LogActivityView.tsx
src/components/Progress/: ProgressView.tsx
src/lib/: autofill.ts  fitData.ts  tauri.ts  units.ts
src/store/: activityStore.ts  garminStore.ts
src/styles/: global.css  variables.css
