[package]
name = "exercise-tracker"
version = "0.1.0"
description = "A cardio exercise tracker"
authors = ["you"]
edition = "2021"
license.workspace = true

[lib]
name = "exercise_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
exercise-tracker-core = { path = "../crates/exercise-tracker-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
fitparser = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
