[package]
name = "exercise-tracker-cli"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "exercise-tracker-cli"
path = "src/main.rs"

[dependencies]
exercise-tracker-core = { path = "../exercise-tracker-core" }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "6"
